[gd_scene load_steps=4 format=3 uid="uid://ba5a57dh4wkct"]

[ext_resource type="Script" uid="uid://b4ju1yodiu6kc" path="res://Scripts/Card.gd" id="1_ws51j"]
[ext_resource type="Script" uid="uid://cvtrvep3g5586" path="res://Scripts/CardAnimator.gd" id="3_3rpue"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_se2ob"]
size = Vector2(518, 978)

[node name="Card" type="Area2D" groups=["cartes"]]
z_index = 3
collision_mask = 2
script = ExtResource("1_ws51j")

[node name="CardSprite" type="AnimatedSprite2D" parent="."]
animation = &""
script = ExtResource("3_3rpue")

[node name="SurbrillanceSprite" type="AnimatedSprite2D" parent="."]

[node name="ShadowSprite" type="AnimatedSprite2D" parent="."]
visible = false
z_index = -1
animation = &""

[node name="CardButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -256.0
offset_top = -492.0
offset_right = 258.0
offset_bottom = 493.0
mouse_default_cursor_shape = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_se2ob")

[connection signal="area_entered" from="." to="." method="_on_emplacement_entered"]
[connection signal="area_exited" from="." to="." method="_on_emplacement_exited"]
[connection signal="button_down" from="CardButton" to="." method="_on_card_button_down"]
[connection signal="button_up" from="CardButton" to="." method="_on_card_button_up"]
[connection signal="mouse_entered" from="CardButton" to="." method="_on_card_button_mouse_entered"]
[connection signal="mouse_exited" from="CardButton" to="." method="_on_card_button_mouse_exited"]
